--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "gmaps",
+  "name": "find-the-spot",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "method-override": "^2.3.6",
-    "ng-resource": "^1.3.2",
-    "yelp": "^1.0.1"
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "~1.0.0",
+    "cookie-parser": "^1.0.1",
+    "cors": "^2.7.1",
+    "express": "~4.0.0",
+    "express-jwt": "^3.0.1",
+    "jsonwebtoken": "^5.0.5",
+    "method-override": "^1.0.2",
+    "mongoose": "4.1.1",
+    "morgan": "~1.0.0",
+    "passport": "^0.2.0",
+    "passport-local": "~0.1.6",
+    "validator": "^5.1.0"
   }
 }
