intergrated app and search

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.0.0",
     "passport": "^0.2.0",
     "passport-local": "~0.1.6",
-    "validator": "^5.1.0"
+    "validator": "^5.1.0",
+    "yelp": "^1.0.1"
   }
 }
